# idlegeometry

./: Cargo.toml  saved_file
src/: constants.rs  main.rs
src/enums/: gamestate.rs  gametab.rs  mod.rs  numberformatmode.rs
src/game/: constants.rs  game.rs  game_data.rs  game_loop.rs  initialise.rs  input_listener.rs  mod.rs  save_load.rs  settings.rs
src/game/collision/: detect_collision.rs  mod.rs  spatial_hash_grid.rs
src/game/data/: damage_numbers.rs  experience_data.rs  game_data.rs  initialise.rs  initialise_adventure.rs  initialise_data.rs  mod.rs  player_data.rs  resource_cost.rs  save_load.rs  stored_data.rs
src/game/helper/: mod.rs  vec2_extension.rs
src/game/loops/: game_loop.rs  idle_loop.rs  input_listener.rs  key_state.rs  mod.rs  move_player.rs  unit_spawner.rs
src/game/map/: camera_state.rs  game_map.rs  game_tile.rs  mod.rs  tile_type.rs
src/game/maths/: integers.rs  mod.rs  pos_2.rs
src/game/objects/: animation.rs  create_units.rs  game_object.rs  lair_object.rs  loot.rs  mod.rs  object_shape.rs  object_type.rs  on_death.rs  sound.rs  unit_defaults.rs
src/game/resources/: bignumber.rs  loot.rs  mod.rs  resource.rs
src/game/serialise/: mod.rs  pos2_serialisable.rs
src/game/units/: animation.rs  attack.rs  create_attacks.rs  create_units.rs  mod.rs  on_death.rs  unit.rs  unit_defaults.rs  unit_map.rs  unit_shape.rs  unit_type.rs  upgrades.rs
src/helper/: lock_helper.rs  mod.rs
src/resources/: bignumber.rs  resource.rs
src/ui/: custom_window.rs  geometry.rs  mod.rs  settingspanel.rs  sidemenu.rs  sidepanel.rs  window.rs
(+43 files in other folders)
