[package]
name = "idlegeometry"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.0"
eframe = { version = "0.31.0", features = ["wgpu"] }
image = "0.25.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
chrono = "0.4.40"
steamworks = "0.11.0"
rdev = "0.5.3"
device_query_revamped = "2.2.1"
rand = "0.9.0"
rayon = "1.10.0"
glow = "0.16.0"
num_cpus = "1.16.0"
rustc-hash = "2.1.1"
bytemuck = "1.22.0"
kira = "0.10.4"